--- a/ingest_acs.ipynb
+++ b/ingest_acs.ipynb
@@ -31,6 +31,97 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "e9cae827-3c43-4732-88b2-c252c22ac9fe",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql import DataFrame\n",
+    "from typing import List, Dict, Optional\n",
+    "from pyspark.sql.types import DoubleType\n",
+    "from pyspark.sql.functions import udf, broadcast\n",
+    "from pyspark.sql.types import StringType\n",
+    "\n",
+    "volumepath = \"/Volumes/mimi_ws_1/census/src/acs/2023_5yr_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0909777f-1ba3-42a4-8dfd-54200c28ce20",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# https://www.census.gov/programs-surveys/geography/technical-documentation/naming-convention/cartographic-boundary-file/carto-boundary-summary-level.html\n",
+    "geo_mapping = {\n",
+    "    \"010\": \"United States\",\n",
+    "    \"020\": \"Region\",\n",
+    "    \"030\": \"Division\",\n",
+    "    \"040\": \"State\",\n",
+    "    \"050\": \"State-County\",\n",
+    "    \"060\": \"State-County-County Subdivision\",\n",
+    "    \"067\": \"State-County-County Subdivision-Subminor Civil Division\",\n",
+    "    \"140\": \"State-County-Census Tract\",\n",
+    "    \"150\": \"State-County-Census Tract-Block Group\",\n",
+    "    \"160\": \"State-Place\",\n",
+    "    \"170\": \"State-Consolidated City\",\n",
+    "    \"230\": \"State-Alaska Native Regional Corporation\",\n",
+    "    \"250\": \"American Indian Area/Alaska Native Area/Hawaiian Home Land\",\n",
+    "    \"251\": \"American Indian Area-Tribal Subdivision/Remainder\",\n",
+    "    \"252\": \"American Indian Area/Alaska Native Area (Reservation or Statistical Entity Only)\",\n",
+    "    \"254\": \"American Indian Area (Off-Reservation Trust Land Only)/Hawaiian Home Land\",\n",
+    "    \"256\": \"American Indian Area-Tribal Census Tract\",\n",
+    "    \"258\": \"American Indian Area-Tribal Census Tract-Tribal Block Group\",\n",
+    "    \"310\": \"Metropolitan Statistical Area/Micropolitan Statistical Area\",\n",
+    "    \"314\": \"Metropolitan Statistical Area-Metropolitan Division\",\n",
+    "    \"330\": \"Combined Statistical Area\",\n",
+    "    \"332\": \"Combined Statistical Area-Metropolitan Statistical Area/Micropolitan Statistical Area\",\n",
+    "    \"335\": \"Combined New England City and Town Area\",\n",
+    "    \"337\": \"Combined New England City and Town Area-New England City and Town Area\",\n",
+    "    \"350\": \"New England City and Town Area\",\n",
+    "    \"352\": \"New England City and Town Area-State-Principal City\",\n",
+    "    \"355\": \"New England City and Town Area (NECTA)-NECTA Division\",\n",
+    "    \"361\": \"State-New England City and Town Area-Principal City\",\n",
+    "    \"500\": \"State-Congressional District (111th)\",\n",
+    "    \"610\": \"State-State Legislative District (Upper Chamber)\",\n",
+    "    \"620\": \"State-State Legislative District (Lower Chamber)\",\n",
+    "    \"700\": \"State-County-Voting District/Remainder\",\n",
+    "    \"860\": \"5-Digit ZIP code Tabulation Area\",\n",
+    "    \"950\": \"State-School District (Elementary)/Remainder\",\n",
+    "    \"960\": \"State-School District (Secondary)/Remainder\",\n",
+    "    \"970\": \"State-School District (Unified)/Remainder\"\n",
+    "}\n",
+    "def lookup_description(code):\n",
+    "    return geo_mapping.get(code, \"Unknown\")\n",
+    "\n",
+    "lookup_udf = udf(lookup_description, StringType())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "7cdc1c53-8bab-4fc1-9253-9ceff4ec52f9",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -52,36 +143,11 @@
     "    'PLACE',       # Place/city FIPS code (if applicable)\n",
     "    'ZCTA5'        # ZIP code tabulation area (if applicable)\n",
     "]\n",
-    "df = spark.read.csv(filepath_geos, header=True, sep='|', inferSchema=True)\n",
+    "df = spark.read.csv(filepath_geos, header=True, sep='|', inferSchema=False)\n",
     "df = df.select(*geo_key_columns)\n",
     "for col in geo_key_columns:\n",
-    "    df = df.withColumnRenamed(col, col.lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "e9cae827-3c43-4732-88b2-c252c22ac9fe",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from pyspark.sql import functions as F\n",
-    "from pyspark.sql import DataFrame\n",
-    "from typing import List, Dict, Optional\n",
-    "from pyspark.sql.types import DoubleType\n",
-    "\n",
-    "volumepath = \"/Volumes/mimi_ws_1/census/src/acs/2023_5yr_data\""
+    "    df = df.withColumnRenamed(col, col.lower())\n",
+    "df = df.withColumn(\"sumlevel_desc\", lookup_udf(F.col(\"sumlevel\")))"
    ]
   },
   {
@@ -790,7 +856,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "25cd0b21-be14-43b4-b2ec-eba3025829e4",
      "showTitle": false,
